--- a/services/auth/proxy/compose.yaml
+++ b/services/auth/proxy/compose.yaml
@@ -1,7 +1,3 @@
-networks:
-  oauth2-proxy:
-    driver: bridge
-
 services:
   oauth2-proxy:
     image: quay.io/oauth2-proxy/oauth2-proxy:v7.13.0-alpine
@@ -40,8 +36,8 @@ services:
       keycloak:
         condition: service_healthy
     networks:
-      - oauth2-proxy
-      - keycloak-network
+      - keycloak
+      - auth
     healthcheck:
       test: [ "CMD", "wget", "--tries=1", "--spider", "http://localhost:4180/ping" ]
       interval: 10s
