--- a/novops/stages/dev/traefik.yml
+++ b/novops/stages/dev/traefik.yml
@@ -5,7 +5,14 @@ environments:
         value: docker
 
       - name: DOMAIN
-        value: pukiru.online
+        value: localhost
+
+      - name: TRAEFIK_TLS_ENABLED
+        value: "false"
+
+      - name: TRAEFIK_TLS_CA_SERVER
+        value: ""
+
       - name: TRAEFIK_IMAGE_TAG
         value: "traefik:v3.6.7"
 
