--- a/services/auth/identity/compose.yaml
+++ b/services/auth/identity/compose.yaml
@@ -72,8 +72,6 @@ services:
       # Define the internal container port for routing
       - "traefik.http.services.keycloak.loadbalancer.server.port=8080"
       # Enable TLS on this router
-      - "traefik.http.routers.keycloak.tls=true"
-      # Use Let's Encrypt for certificate management
-      - "traefik.http.routers.keycloak.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.keycloak.tls=${TRAEFIK_TLS_ENABLED}"
       # Pass the original Host header to the container
       - "traefik.http.services.keycloak.loadbalancer.passhostheader=true"
