--- a/services/ingress/compose.yaml
+++ b/services/ingress/compose.yaml
@@ -44,8 +44,7 @@ services:
       # The file where ACME certificates are stored inside the container
       - "--certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme/acme.json"
       # Use ACME (Let's Encrypt) to generate/renew certificates via DNS challenge
-      #      - "--certificatesresolvers.letsencrypt.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory"
-      - "--certificatesresolvers.letsencrypt.acme.caServer=https://acme-v02.api.letsencrypt.org/directory"
+      - "--certificatesresolvers.letsencrypt.acme.caServer=${TRAEFIK_TLS_CA_SERVER}"
       - "--certificatesresolvers.letsencrypt.acme.dnsChallenge.provider=cloudflare"
       - "--certificatesresolvers.letsencrypt.acme.dnsChallenge.propagation.delayBeforeChecks=5"
       # The email address used by Let's Encrypt for renewal notices
@@ -69,8 +68,7 @@ services:
       # Apply middlewares
       #      - "traefik.http.routers.dashboard.middlewares=authtraefik"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
-      - "traefik.http.routers.dashboard.tls=true"
-      - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.dashboard.tls=${TRAEFIK_TLS_ENABLED}"
       - "traefik.http.routers.dashboard.service=api@internal"
       # Specify the internal server port to the dashboard service
       - "traefik.http.services.dashboard.loadbalancer.server.port=8080"
