--- a/services/ingress/compose.yaml
+++ b/services/ingress/compose.yaml
@@ -68,7 +68,7 @@ services:
       # Apply middlewares
       #      - "traefik.http.routers.dashboard.middlewares=authtraefik"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
-      - "traefik.http.routers.dashboard.tls=${TRAEFIK_TLS_ENABLED}"
+      - "traefik.http.routers.dashboard.tls=true"
       - "traefik.http.routers.dashboard.service=api@internal"
       # Specify the internal server port to the dashboard service
       - "traefik.http.services.dashboard.loadbalancer.server.port=8080"
