Simplify dev/prod compose using makefile.

--- a/novops/stages/dev/traefik.yml
+++ b/novops/stages/dev/traefik.yml
@@ -14,19 +14,10 @@ environments:
         value: "traefik:v3.6.7"
 
       - name: TRAEFIK_LOG_LEVEL
-        value: WARN
-
-      - name: TRAEFIK_ACME_EMAIL
-        value: dalton@pukiru.games
+        value: INFO
 
       - name: TRAEFIK_BASIC_AUTH
         value: "test:$2y$10$leXJg98mfBd6W4.oZ76xd.0OFkLIb3nEYFwZoR.Oj//iUHEw9I15G"
-
-      - name: TRAEFIK_ACME_dns_api_secret
-        value:
-          bitwarden:
-            entry: pukiru-online-cloudflare_dns_secret
-            field: login.password
 
       - name: TRAEFIK_DASHBOARD_ROUTE_PREFIX
         value: traefik
