--- a/services/applications/whoami-compose.yaml
+++ b/services/applications/whoami-compose.yaml
@@ -13,5 +13,5 @@ services:
       - "traefik.http.routers.whoami.middlewares=compress-traefik@file,oauth-auth,oauth-errors,security-headers@file"
       # Enable TLS on this router
       - "traefik.http.routers.whoami.tls=true"
-      # Use Let's Encrypt for TLS management
-      - "traefik.http.routers.whoami.tls.certresolver=letsencrypt"
+#      # Use Let's Encrypt for TLS management
+#      - "traefik.http.routers.whoami.tls.certresolver=letsencrypt"
