--- a/docker-compose.applications.yml
+++ b/docker-compose.applications.yml
@@ -1,3 +1,4 @@
 include:
   - services/applications/whoami-compose.yaml
   - services/applications/vaultwarden-compose.yaml
+  - services/auth/proxy/compose.yaml
