Default DNS API secret to empty string.

--- a/services/ingress/compose.yaml
+++ b/services/ingress/compose.yaml
@@ -32,7 +32,7 @@ services:
       # Pass the original Host header to the backend
       - "traefik.http.services.dashboard.loadbalancer.passhostheader=true"
     environment:
-      CF_DNS_API_TOKEN: "${TRAEFIK_ACME_dns_api_secret}"
+      CF_DNS_API_TOKEN: "${TRAEFIK_ACME_dns_api_secret:-}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./traefik_configuration/:/etc/traefik/dynamic
