Refactor to deploy with make (#1)
* Shorten network names. Define auth network in traefik compose instead of proxy.

* Configure TLS with env variable.

* Separate env files for prod.

* Remove TLS option. Set true as default.

* Wrap CA server option in quotes.

* Simplify dev/prod compose using makefile.

* WIP on separating applications from oauth prerequisites.

* WIP on separating applications from oauth prerequisites.

* WIP on waiting for Keycloak.

* WIP on waiting for Keycloak.

* Make help.

* Revise dev/prod traefik.

* Attempt at setting extra router for health check.

* Default DNS API secret to empty string.

* Revise default traefik log levels for dev/prod.

* Ensure orphaned containers are removed.

* Remove health check router.

* Remove duplicate network sections from dev/prod files.

* Uncomment TLS label for keycloak.

* Simplify flake with novops reference. Add jq.

* Add flake lock.

* Use HTTP relative path.

* Use HTTPS, disable strict hostname due to proxy.

* Remove old novops file.

* Revise keycloak network preferences for traefik proxy.

* Revise traefik network name.

* Provide access to keycloak health checks.

* Remove unused traefik novops variables.

* Revise nix shell for prod usage.

---------

Co-authored-by: Dalton <dalton@pukiru.games>

--- a/novops/stages/prod/traefik.yml
+++ b/novops/stages/prod/traefik.yml
@@ -1,17 +1,17 @@
 environments:
-  dev:
+  prod:
     variables:
       - name: HOST
         value: docker
 
       - name: DOMAIN
-        value: localhost
+        value: pukiru.online
 
       - name: TRAEFIK_IMAGE_TAG
         value: "traefik:v3.6.7"
 
       - name: TRAEFIK_LOG_LEVEL
-        value: INFO
+        value: WARN
 
       - name: TRAEFIK_DASHBOARD_ROUTE_PREFIX
         value: traefik
@@ -30,3 +30,13 @@ environments:
           bitwarden:
             entry: pukiru-online-oauth2_proxy_client_secret
             field: login.password
+
+      - name: TRAEFIK_ACME_EMAIL
+        value: dalton@pukiru.games
+
+      - name: TRAEFIK_ACME_dns_api_secret
+        value:
+          bitwarden:
+            entry: pukiru-online-cloudflare_dns_secret
+            field: login.password
+
