--- a/services/applications/vaultwarden-compose.yaml
+++ b/services/applications/vaultwarden-compose.yaml
@@ -1,5 +1,5 @@
 networks:
-  vaultwarden-network:
+  vaultwarden:
     driver: bridge
 
 volumes:
@@ -26,8 +26,8 @@ services:
       SMTP_USERNAME: "${SMTP_USERNAME}"
       SMTP_PASSWORD: "${SMTP_PASSWORD}"
     networks:
-      - vaultwarden-network
-      - traefik-network
+      - vaultwarden
+      - traefik
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80/${VAULTWARDEN_ROUTE_PREFIX}"]
       interval: 10s
@@ -50,6 +50,6 @@ services:
       # Enable TLS on this router
       - "traefik.http.routers.vaultwarden.tls=true"
       # Use Let's Encrypt for certificate management
-      - "traefik.http.routers.vaultwarden.tls.certresolver=letsencrypt"
+#      - "traefik.http.routers.vaultwarden.tls.certresolver=letsencrypt"
       # Pass the original Host header to the container
       - "traefik.http.services.vaultwarden.loadbalancer.passhostheader=true"
