--- a/services/auth/proxy/compose.yaml
+++ b/services/auth/proxy/compose.yaml
@@ -1,7 +1,3 @@
-networks:
-  oauth2-proxy:
-    driver: bridge
-
 services:
   oauth2-proxy:
     image: quay.io/oauth2-proxy/oauth2-proxy:v7.13.0-alpine
@@ -24,7 +20,7 @@ services:
       # Enable TLS on this router
       - "traefik.http.routers.oauth2-proxy.tls=true"
       # Use Let's Encrypt for TLS management
-      - "traefik.http.routers.oauth2-proxy.tls.certresolver=letsencrypt"
+#      - "traefik.http.routers.oauth2-proxy.tls.certresolver=letsencrypt"
       # Apply middlewares
       - "traefik.http.routers.oauth2-proxy.middlewares=compress-traefik@file,security-headers@file"
       # Define middlewares for oauth apps
@@ -40,8 +36,8 @@ services:
       keycloak:
         condition: service_healthy
     networks:
-      - oauth2-proxy
-      - keycloak-network
+      - keycloak
+      - auth
     healthcheck:
       test: [ "CMD", "wget", "--tries=1", "--spider", "http://localhost:4180/ping" ]
       interval: 10s
