Separate SMTP settings from vaultwarden/keycloak variables. Set smtp settings in keycloak configuration container.

--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -14,8 +14,8 @@ services:
       TF_VAR_smtp_port: ${SMTP_PORT}
       TF_VAR_smtp_username: ${SMTP_USERNAME}
       TF_VAR_smtp_password: ${SMTP_PASSWORD}
-      TF_VAR_smtp_from_email: ${SMTP_FROM_EMAIL}
-      TF_VAR_smtp_from_name: ${SMTP_FROM_NAME}
+      TF_VAR_smtp_from_email: "keycloak@${SMTP_FROM_EMAIL_DOMAIN}"
+      TF_VAR_smtp_from_name: "Keycloak"
       TF_VAR_state_encryption_passphrase: ${tofu_state_encryption_passphrase}
     networks:
       - keycloak
