Apply OpenTofu to create realm for domain automatically with core setup.

--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -5,7 +5,7 @@ services:
     volumes:
       - tofu_state:/work
     environment:
-      TF_VAR_keycloak_url: ${KEYCLOAK_URL:-http://keycloak:8080}
+      TF_VAR_keycloak_url: ${KEYCLOAK_URL:-http://keycloak:8080/auth}
       TF_VAR_keycloak_username: ${KEYCLOAK_ADMIN}
       TF_VAR_keycloak_password: ${KEYCLOAK_ADMIN_PASSWORD}
       TF_VAR_keycloak_realm: ${DOMAIN}
