--- a/novops/stages/dev/keycloak.yml
+++ b/novops/stages/dev/keycloak.yml
@@ -37,7 +37,7 @@ environments:
       - name: KEYCLOAK_ROUTE_PREFIX
         value: auth
 
-      - name: KEYCLOAK_REALM_NAME
+      - name: KEYCLOAK_REALM
         value: pukiru_online
 
       - name: tofu_state_encryption_passphrase
