--- a/services/auth/identity/compose.yaml
+++ b/services/auth/identity/compose.yaml
@@ -64,13 +64,20 @@ services:
       - "traefik.enable=true"
       # Prefer traefik network for internal communication between containers, as this container is on multiple networks.
       - "traefik.docker.network=${HOST}.${DOMAIN}-traefik"
+      # --- Services (same backend, different routers) ---
       - "traefik.http.services.keycloak.loadbalancer.server.port=8080"
       - "traefik.http.services.keycloak.loadbalancer.passhostheader=true"
-      - "traefik.http.routers.keycloak.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/${KEYCLOAK_ROUTE_PREFIX}`)"
-      - "traefik.http.routers.keycloak.middlewares=compress-traefik@file,security-headers@file"
-      - "traefik.http.routers.keycloak.service=keycloak"
-      - "traefik.http.routers.keycloak.entrypoints=websecure"
-      - "traefik.http.routers.keycloak.tls=true"
+
+      # --- PUBLIC REALM ROUTER (host: ${HOST}.${DOMAIN}, path-based) ---
+      # Only expose the OpenTofu-managed realm + shared static resources.
+      # This prevents routing to /realms/master/* (and avoids exposing /admin/*).
+      - "traefik.http.routers.keycloak_public.rule=Host(`${HOST}.${DOMAIN}`) && (PathPrefix(`/${KEYCLOAK_ROUTE_PREFIX}/realms/${KEYCLOAK_REALM}`) || PathPrefix(`/${KEYCLOAK_ROUTE_PREFIX}/resources/`))"
+      - "traefik.http.routers.keycloak_public.middlewares=compress-traefik@file,security-headers@file"
+      - "traefik.http.routers.keycloak_public.service=keycloak"
+      - "traefik.http.routers.keycloak_public.entrypoints=websecure"
+      - "traefik.http.routers.keycloak_public.tls=true"
+
+      # --- Health ---
       - "traefik.http.services.keycloak_health.loadbalancer.server.port=9000"
       - "traefik.http.services.keycloak_health.loadbalancer.passhostheader=true"
       - "traefik.http.routers.keycloak_health.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/${KEYCLOAK_ROUTE_PREFIX}/health`)"
