--- a/services/auth/proxy/oauth2_proxy/oauth2-proxy-traefik.cfg
+++ b/services/auth/proxy/oauth2_proxy/oauth2-proxy-traefik.cfg
@@ -13,7 +13,7 @@ code_challenge_method="S256"
 
 # Mandatory option when using oauth2-proxy with traefik
 reverse_proxy="true"
-proxy_prefix="/oauth2"
+;proxy_prefix="/oauth2"
 silence_ping_logging="true"
 # Required for traefik with ForwardAuth and static upstream configuration
 upstreams="static://202"
