--- a/services/applications/vaultwarden-compose.yaml
+++ b/services/applications/vaultwarden-compose.yaml
@@ -22,7 +22,7 @@ services:
       SMTP_HOST: "${SMTP_HOST}"
       SMTP_PORT: "${SMTP_PORT}"
       SMTP_SECURITY: "${SMTP_SECURITY}"
-      SMTP_FROM: "${VAULTWARDEN_SMTP_FROM}"
+      SMTP_FROM: "vaultwarden@${DOMAIN}"
       SMTP_USERNAME: "${SMTP_USERNAME}"
       SMTP_PASSWORD: "${SMTP_PASSWORD}"
     networks:
