--- a/novops/stages/dev/oauth2_proxy.yml
+++ b/novops/stages/dev/oauth2_proxy.yml
@@ -3,5 +3,5 @@ environments:
     variables:
       - name: OAUTH2_PROXY_IMAGE_TAG
         value: "v7.13.0-alpine"
-      - name: OAUTH_SECRETS_DIR
-        value: "/etc/oauth2-proxy-secrets/dev"
+      - name: OAUTH_CONFIG_DIR
+        value: "~/oauth2-proxy-config/dev"
