Rename config/secrets directory.

--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -4,7 +4,7 @@ services:
     working_dir: /work
     volumes:
       - tofu_state:/work
-      - ${OAUTH_CONFIG_DIR}:/work/secrets
+      - ${OAUTH_CONFIG_DIR}:/work/config
     environment:
       TF_VAR_keycloak_url: ${KEYCLOAK_URL:-http://keycloak:8080/auth}
       TF_VAR_keycloak_username: ${KEYCLOAK_ADMIN}
@@ -18,7 +18,7 @@ services:
       TF_VAR_smtp_from_email: "keycloak@${SMTP_FROM_EMAIL_DOMAIN}"
       TF_VAR_smtp_from_name: "Keycloak"
       TF_VAR_state_encryption_passphrase: ${tofu_state_encryption_passphrase}
-      TF_VAR_oauth_application_base_url: "https://${HOST}.${DOMAIN}/apps/"
+      TF_VAR_oauth_application_base_url: "https://${HOST}.${DOMAIN}/apps"
     networks:
       - keycloak
     depends_on:
