--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -6,7 +6,8 @@ services:
       - tofu_state:/work
       - ${OAUTH_CONFIG_DIR}:/work/config
     environment:
-      TF_VAR_keycloak_url: ${KEYCLOAK_URL:-http://keycloak:8080/auth}
+      TF_VAR_keycloak_internal_url: ${KEYCLOAK_URL:-http://keycloak:8080/${KEYCLOAK_ROUTE_PREFIX}}
+      TF_VAR_keycloak_public_url: "https://${HOST}.${DOMAIN}/${KEYCLOAK_ROUTE_PREFIX}"
       TF_VAR_keycloak_username: ${KEYCLOAK_ADMIN}
       TF_VAR_keycloak_password: ${KEYCLOAK_ADMIN_PASSWORD}
       TF_VAR_keycloak_realm: ${KEYCLOAK_REALM}
