--- a/services/auth/proxy/compose.oauth2_proxy_base.yaml
+++ b/services/auth/proxy/compose.oauth2_proxy_base.yaml
@@ -42,6 +42,7 @@ services:
         condition: service_healthy
     networks:
       - keycloak
+      - traefik
       - auth
     healthcheck:
       test: [ "CMD", "wget", "--tries=1", "--spider", "http://localhost:4180/ping" ]
