Skip SSL verification for dev.

--- a/novops/stages/prod/oauth2_proxy.yml
+++ b/novops/stages/prod/oauth2_proxy.yml
@@ -3,5 +3,9 @@ environments:
     variables:
       - name: OAUTH2_PROXY_IMAGE_TAG
         value: "v7.13.0-alpine"
+
       - name: OAUTH_CONFIG_DIR
         value: "/etc/oauth2-proxy-config/prod"
+
+      - name: OAUTH_SSL_INSECURE_SKIP_VERIFY
+        value: "true"
