--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -20,6 +20,7 @@ services:
       TF_VAR_smtp_from_name: "Keycloak"
       TF_VAR_state_encryption_passphrase: ${tofu_state_encryption_passphrase}
       TF_VAR_oauth_application_base_url: "https://${HOST}.${DOMAIN}/apps"
+      TF_VAR_ssl_insecure_skip_verify: "${OAUTH_SSL_INSECURE_SKIP_VERIFY:-false}"
     networks:
       - keycloak
     depends_on:
